--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">ButtonWiInnerClass</string>
-    <string name="button2">버튼2</string>
+    <string name="button2">SB Button</string>
 </resources>
